--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ function sayYes() {
         <div style="display:flex;flex-direction:column;justify-content:center;align-items:center;height:100vh;text-align:center;color:#ff4d6d;padding:20px;">
             <h1>YAY!! 💕🥰</h1>
             <p style="font-size:20px;max-width:520px;">
-                Thank you for continuing to be the best partner I could have ever dreamed of baby, I love you muchisimmo 💖
+                Thank you for continuing to be the best partner I could have ever dreamed of baby, I love you muchisimo 💖
             </p>
             <p style="font-size:19px;">Every second is one closer to you.</p>
             <h2>Until I see you again ✈️💘</h2>
